Fix arrow gap issue

--- a/indico/web/client/js/custom_elements/tips.scss
+++ b/indico/web/client/js/custom_elements/tips.scss
@@ -94,33 +94,20 @@ ind-with-toggletip {
 
   // Arrows
   &[shown]:not([data-position-check])::after {
+    @extend %popup-arrow;
+    --arrow-color: var(--tooltip-surface-color);
     --arrow-size: 0.5em;
-
-    content: '';
-    position: absolute;
-    display: inline-block;
-
-    // The default appearance of the arrow always has it pointing up
-    // and the actual direction is controlled via rotation
-    border-style: solid;
-    border-color: transparent transparent var(--tooltip-surface-color) transparent;
-    border-width: var(--arrow-size);
-    transform: rotate(var(--arrow-direction));
   }
 
   &[orientation='horizontal']::after {
-    left: calc(var(--arrow-left) - var(--arrow-size) + 0.1em);
-    right: calc(100% - var(--arrow-size) + 0.1em);
-    top: calc(50% - var(--arrow-size));
+    @extend %popup-arrow-horizontal;
   }
 
   // The orientation attribute may be unset, so instead
   // of testing that [orientation='vertical'] we test that
   // :not([orientation='horizontal'])
   &:not([orientation='horizontal'])::after {
-    top: calc(var(--arrow-top) - var(--arrow-size) + 0.1em);
-    bottom: calc(100% - var(--arrow-size) + 0.1em);
-    left: calc(50% - var(--arrow-size));
+    @extend %popup-arrow-vertical;
   }
 }
 
